[package]
name = "gitty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix = "0.44.1"
ureq = "2.7.1"
#dialoguer = "0.11.0"
inquire="0.6.2"
serde = {version="1.0.188", features=["derive"]}
serde_json = "1.0.107"
juniper="0.15.11"
chrono = "0.4.31"

[dev-dependencies]
dotenv="0.15.0"
serial_test = "2.0.0"
